# web-stuff

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  style.yml
website/: __init__.py  __main__.py  admin.py  app.py  base.py  cal.py  calendar.py  models.py
website/templates/: ambientScreen.html  base.html  calendar-attempt-1.html  calendar.html  calendarSetUp.html  customise.html  depreciated_index.html  family.html  guide.html  index.html  manageFamily.html
website/templates/css/: base.css  calendar.css  main.css
website/templates/js/: calendarTimes.js  familyManagement.js  guideCalendarTabs.js  mainLoop.js  mousetrap.js  times.txt
