[tool.poetry]
name = "web-stuff"
version = "0.0.1"
description = "Main calendar display interface for ambient design stuff (whee!)"
authors = ["Skill Issue deco3801 team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
waitress = "^2.1.2"
mako = "^1.2.4"
flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
